# RSSPub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_prof  LICENSE  README.md  docker-compose.yml  rpub.db  rsspub_http_shortcuts.json
.github/workflows/: docker-publish.yml
browser_extension/: manifest.json  options.html  options.js  popup.html  popup.js  styles.css
src/: db.rs  email.rs  epub_gen.rs  epub_message.rs  feed.rs  handlers.rs  image.rs  image_inmem.rs  lib.rs  main.rs  opds.rs  processor.rs  routes.rs  scheduler.rs  templates.rs  util.rs
src/db/: category_db.rs  feed_db.rs  migration.rs  mod.rs  schema_init.rs
src/handlers/: auth_handler.rs  category_handler.rs  download_handler.rs  email_handler.rs  feed_handler.rs  mod.rs  read_it_later_handler.rs  schedule_handler.rs
src/models/: mod.rs
src/util/: content_extractors.rs  mod.rs
static/: index.html  style.css
templates/: article.html  cover.html  master_toc.html  opds.html  source_toc.html  xhtml_wrapper.html
tests/: epub_gen_tests.rs
ui/: deno.json  index.html  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: CoverSection.svelte  DownloadsSection.svelte  EmailConfigSection.svelte  FeedsSection.svelte  GeneralConfigSection.svelte  GenerationSection.svelte  Header.svelte  LoginOverlay.svelte  Popup.svelte  ReadItLaterSection.svelte  SchedulesSection.svelte  Tabs.svelte
ui/src/lib/: api.ts  store.ts
