[package]
name = "rsspub"
version = "0.9.5"
edition = "2024"

[dependencies]
feed-rs = "2.3.1"
reqwest = { version = "0.12.25", features = ["json", "blocking", "cookies","rustls-tls"],default-features = false }
tokio = { version = "1.48", features = ["full"] }
epub-builder = "0.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0" # For error handling
axum = { version = "0.8.7", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dom_smoothie = "0.14.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-cron-scheduler = "0.15.1"
lettre = { version = "0.11.19",default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport","builder"] }
libvips = { version = "1.7.1", optional = true }
regex = "1.10"
ammonia = "4.1.2"
tempfile = "3.23.0"
image = "0.25.9"
uuid = { version = "1.19.0 ",features = ["v4", ] }
base64 = "0.22.1"
indicatif = "0.18.3"
tikv-jemallocator = {version ="0.6.1",optional = true,features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = {version ="0.6.1",optional = true }

[features]
default = []
mem_opt = ["dep:libvips"]
alternative-alloc = ["tikv-jemallocator","tikv-jemalloc-ctl"]
